--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/index.js",
   "scripts": {
     "start": "cd server && node index.js",
-    "heroku-postbuild": "cd server && npm install && cd ../client && npm install --unsafe-perm && npm run build"
+    "heroku-postbuild": "cd server && npm install --unsafe-perm && cd ../client && npm install --unsafe-perm && npm run build"
   },
   "repository": {
     "type": "git",
